fix word stretch issue

--- a/client/src/pages/User/user.scss
+++ b/client/src/pages/User/user.scss
@@ -67,6 +67,10 @@
             grid-template-columns: 1fr 2fr;
             gap: 1rem;
             margin: 1.5rem 0 0 0;
+            .content {
+               overflow: hidden;
+               word-wrap: break-word;
+            }
             h3 {
                font-family: 'Bacasime Antique', serif;
                margin: 1rem 0 0 0;
